# vocabulary-learning

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  install.sh  progress.json  pyproject.toml  requirements.txt  ruff.toml  vocab_learner.py  vocabulary.csv  vocabulary.json
.github/workflows/: test.yml
api/: README.md  main.py
data/: vocabulary.json
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  PrivateRoute.tsx
frontend/src/config/: firebase.ts  theme.ts
frontend/src/contexts/: auth.ts
frontend/src/contexts/auth/: context.ts  index.ts  provider.tsx  types.ts
frontend/src/hooks/auth/: useAuth.ts
frontend/src/pages/: Login.tsx  Practice.tsx  Stats.tsx  Vocabulary.tsx
frontend/src/pages/__tests__/: Practice.test.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: run-eslint.sh
tests/: test_file_operations.py  test_japanese_utils.py  test_main.py  test_practice.py  test_progress_tracking.py  test_ui_components.py  test_vocabulary.py  test_vocabulary_management.py
utils/: __init__.py  convert_csv_to_json.py  reset_progress.py  sync_to_firebase.py  test_firebase.py  update_word_ids.py
vocab_learner/: __main__.py  config.py  firebase_manager.py  japanese_utils.py  logger.py  progress_manager.py  ui_manager.py  vocab_learner.py  vocabulary_manager.py
vocabulary_learning/: __init__.py  main.py
vocabulary_learning/core/: __init__.py  console_utils.py  constants.py  file_operations.py  firebase_config.py  japanese_utils.py  paths.py  practice.py  progress_helpers.py  progress_tracking.py  signal_handlers.py  ssl_config.py  text_processing.py  time_utils.py  ui_components.py  utils.py  vocabulary.py  vocabulary_management.py
vocabulary_learning/data/: progress.json.backup.20250211_203516  vocabulary.json
vocabulary_learning/default_data/: vocabulary.json
vocabulary_learning/services/: base_service.py  practice_service.py  progress_service.py  vocabulary_service.py
vocabulary_learning/utils/: add_definition.py  clean_progress.py  convert_csv_to_json.py  convert_vocabulary.py  count_stats.py  find_duplicates.py  fix_duplicates.py  fix_progress.py  fix_translations.py  load_from_firebase.py  migrate_data.py  reset_progress.py  sync_to_firebase.py  test_firebase.py  update_env.py  update_vocabulary.py  update_word_ids.py
