[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vocabulary-learning"
version = "0.1.0"
authors = [
    { name="Aurelien Nioche", email="aurelien.nioche@gmail.com" },
]
description = "A tool for learning Japanese vocabulary"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "firebase-admin",
    "python-dotenv",
    "rich",
    "pandas",
    "pykakasi",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pre-commit",
]

[project.scripts]
vocab = "vocabulary_learning.main:main"

[tool.pytest.ini_options]
addopts = "--cov=vocabulary_learning"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.hatch.build.targets.wheel]
packages = ["vocabulary_learning"]

[tool.hatch.build.targets.wheel.sources]
"vocabulary_learning" = "vocabulary_learning"
"vocabulary_learning/default_data" = "vocabulary_learning/default_data"
